fix => icon,sorting and date alignment

--- a/static/css/scss.css
+++ b/static/css/scss.css
@@ -47,7 +47,7 @@
   } */
   
   .timeline-item.right::after {
-    left: -41px;  }
+    left: -26px;  }
 /*   
   .timeline-item::before {
     content: '';
